--- a/luther-analysis.ipynb
+++ b/luther-analysis.ipynb
@@ -9588,6 +9588,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(resid)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
