--- a/movie-predictor-analysis.ipynb
+++ b/movie-predictor-analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,6 @@
     "import math\n",
     "\n",
     "# regression\n",
-    "from patsy import dmatrices\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
     "from sklearn import linear_model\n",
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +211,7 @@
        "2875"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -289,9 +288,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -375,11 +374,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python2.7/site-packages/pandas/core/generic.py:2387: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self[name] = value\n"
+     ]
+    }
+   ],
    "source": [
     "with open('data/oscars-data.pkl', 'r') as picklefile:\n",
     "     oscars = pickle.load(picklefile)\n",
@@ -408,15 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "//anaconda/lib/python2.7/site-packages/pandas/core/frame.py:1997: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \"DataFrame index.\", UserWarning)\n",
       "/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -583,12 +597,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# rating: split in R vs. not R\n",
+    "def split_r_rating(rating):\n",
+    "    return rating if rating == 'R' else 'other'\n",
+    "\n",
     "# seasons: split into holiday, winter, and other\n",
     "def recat_seasons(season):\n",
     "    rm_seasons = ['spring', 'summer', 'fall']\n",
@@ -611,9 +629,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -621,11 +639,6 @@
      "output_type": "stream",
      "text": [
       "/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -661,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -678,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -727,13 +740,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "keep = ['release_year', 'budget', 'budget_adj', 'oscar_noms', 'oscar_noms_sq', 'oscar_noms_log', 'runtime_mins', \n",
+    "keep = ['release_year', 'budget', 'budget_adj', 'oscar_noms', 'oscar_noms_log', 'runtime_mins', \n",
     "        'theaters', 'r_rating', 'hw_season', 'recat_genre', 'theaters_log', 'theaters2', 'theaters3', \n",
     "        'dom_roi', 'dom_roi_log', 'actor_noms', 'dir_noms', 'actor_noms_log', 'dir_noms_log', 'actdir_noms_log', \n",
     "        'actdir_noms', 'domestic_total_adj_gross', 'dadj_gross_log', 'roi_genre', 'roi_rating']"
@@ -741,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -760,10 +773,23 @@
    ],
    "source": [
     "# set up dummy variables for categorical features \n",
-    "temp = newer_movies[keep]\n",
+    "temp = m[keep]\n",
     "temp.dropna(inplace = True)\n",
     "dummies = pd.get_dummies(temp)\n",
     "formodel = sm.add_constant(dummies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# pickle for posterity \n",
+    "with open('../3-mcnulty-yelp/movies2.pkl', 'w') as picklefile:\n",
+    "    pickle.dump(formodel, picklefile)"
    ]
   },
   {
